fixed scrolling issue on overflow

--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
   overflow:auto;
 }
 
+#wrapper{
+  width:100%;
+  height: 100%;
+  z-index:3;
+}
+
 #header {
   width: 100%;
   position: fixed;
